--- a/snake.html
+++ b/snake.html
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
-    <script src="/snake-scripts.js" defer="5000ms"></script>
+    <script src="/snake-script.js" defer="5000ms"></script>
   </head>
   <body>
     <div id="top" class="top-bar">
