--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="An Arcade with games" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/ArcadeLogo2Trim.gif" />
+    <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.gif" />
     <link rel="stylesheet" href="/styles.css" />
     <link
       rel="stylesheet"
