--- a/snake.html
+++ b/snake.html
@@ -23,7 +23,7 @@
     <div id="top" class="top-bar">
       <i id="menu" class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="/index.html">
+        <a class="top-bar-item" href="arcade.html">
           The Arcade
           <img
             class="logo top-bar-item"
@@ -32,10 +32,10 @@
         </a>
       </p>
       <p class="games">
-        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a id="gamesLink" href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
       <p class="contact">
-        <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
+        <a id="contactLink" href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
     </div>
     <nav class="nav-bar">
