--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"e
       rel="stylesheet" />
     <script defer src="/contact-scripts.js"></script>
   </head>
@@ -31,20 +31,23 @@
             alt="The Arcade" />
         </a>
       </p>
-      <p class="games">
-        <a href="/index.html#games-selection"
-          >Games <i class="fa-solid fa-gamepad"></i
+      <p class="games top-bar-item">
+        <a id="gamesLink" class="top-bar-item" href="/index.html#games-selection"
+          >Games <i class="fa-solid fa-gamepad top-bar-item"></i
         ></a>
       </p>
-      <p class="contact">
-        <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
+      <p class="contact top-bar-item">
+        <a id="contactLink" class="top-bar-item" href="/contact.html"
+          >Contact <i class="fa-solid fa-phone top-bar-item"></i
+        ></a>
       </p>
     </div>
     <nav class="nav-bar">
-    <p class="toggle-text">
+      <p class="toggle-text">
         &nbsp;Toggle Theme&nbsp;<i
           class="fa-solid fa-toggle-off toggleTheme"></i>
-      </p></nav>
+      </p>
+    </nav>
     <div class="contact-area">
       <img
         class="profile-pic"
