--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"> 
+<html lang="en-us">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -22,20 +22,20 @@
   <body>
     <div id="top" class="top-bar">
       <i id="menu" class="fa-solid fa-bars nav-bar-option"></i>
-     <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="/index.html#top">
+      <p class="logo-text top-bar-item">
+        <a class="top-bar-item" href="/index.html">
           The Arcade
           <img
             class="logo top-bar-item"
-            src="/ArcadeLogo2Trim.gif"
+            src="/images/ArcadeLogo2Trim.gif"
             alt="The Arcade" />
         </a>
       </p>
       <p class="games">
-        <a href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a id="gamesLink" href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
       <p class="contact">
-        <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
+        <a id="contactLink" href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
     </div>
     <nav class="nav-bar">
@@ -45,7 +45,7 @@
       </p>
     </nav>
     <div id="games-selection" class="games-selection">
-      <div class="item 1">
+      <div class="item one">
         <a class="snakeLink" href="/snake.html">
           <img
             class="snakeimg"
@@ -53,13 +53,13 @@
             alt="a image of a snake" />
         </a>
       </div>
-      <div class="item 2">
+      <div class="item two cm">
         <img src="/CMtext.png" alt="Coming soon" />
       </div>
-      <div class="item 3">
+      <div class="item three cm">
         <img src="/CMtext.png" alt="Coming soon" />
       </div>
-      <div class="item 4">
+      <div class="item four cm">
         <img src="/CMtext.png" alt="Coming soon" />
       </div>
     </div>
