--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           The Arcade
           <img
             class="logo top-bar-item"
-            src="/images/ArcadeLogo2Trim.gif"
+            src="/ArcadeLogo2Trim.gif"
             alt="The Arcade" />
         </a>
       </p>
