--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="An Arcade with games" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -32,7 +32,7 @@
         </a>
       </p>
       <p class="games">
-        <a id="gamesLink" href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a id="gamesLink" href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
       <p class="contact">
         <a id="contactLink" href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
