--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
-    <link rel="stylesheet" href="/contact-styles.css" />
+    <link rel="stylesheet" href="contact-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"e
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
     <script defer src="/contact-scripts.js"></script>
   </head>
