--- a/snake.html
+++ b/snake.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -54,7 +55,8 @@
           Version:<br />
           Snek Pre-Alpha
         </p>
-        <p id="scoreText">Score: 0</p>
+        <p id="scoreText">Score: <br>0/0</p>
+        <p id="scoreText"> Controls: WASD / Arrow Keys</p>
         <div id="snek"></div>
       </div>
       <div class="game">
