--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS" />
-    <meta name="description" content="A Arcade with fun games to play!" />
+    <meta name="description" content="An Arcade with games" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
     <link rel="stylesheet" href="contact-styles.css" />
