--- a/snake.html
+++ b/snake.html
@@ -56,6 +56,7 @@
         </p>
         <p id="scoreText">Score: <br>0/0</p>
         <p id="scoreText"> Controls: WASD / Arrow Keys</p>
+        <p id="flashCooldown">Q: Flash Cooldown: Ready</p>
         <div id="snek"></div>
       </div>
       <div class="game">
