--- a/snake.html
+++ b/snake.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<! ––<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
@@ -65,5 +65,60 @@
       <div class="ui"></div>
     </div>
     <!-- <ul id="uljs"></ul> -->
+  </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="description" content="A Arcade with fun games to play!" />
+    <title>The Arcade</title>
+    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo6.png" />
+    <link rel="stylesheet" href="/snake-styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="/snake-script.js" defer="5ms"></script>
+  </head>
+  <body>
+    <div class="arcade-top">
+      <p class="arcade-text"><a href="/arcade.html">The Arcade</a>
+        <div class="games-dropdown">
+          <a href="/snake.html">Snek</a>
+        </div>
+      </p>
+      <p class="games">Games&nbsp;&nbsp;<p class="turn-angle">></p>
+    <div class="contact-dropdown">
+      <a href="mailto:shibeception@proton.me" class="email">Email</a>
+      <a href="https://discord.gg/uXnKS2jQm4">Discord</a>
+    </div></a>
+      <p class="contact">Contact&nbsp;<p class="turn-angle-2">></p></p>
+      </div>
+    <div id="game" class="container-game">
+      <div class="game">
+        <canvas id="canvas" height="512px" width="896px"> </canvas>
+        <canvas id="canvas2" height="512px" width="896px"> </canvas>
+        <canvas id="canvas3" height="512px" width="896px"> </canvas>
+        <canvas id="canvas4" height="512px" width="896px"> </canvas>
+      </div>
+    </div>
+    <div class="play">
+      <div class="playbox">
+      <p>Play</p>
+      <div class="triangle">></div>
+      </div>
+    </div>
   </body>
 </html>
