--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="An Arcade with games" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo6.png" />
-    <link rel="stylesheet" href="/arcade-styles.css" />
+    <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
+    <link rel="stylesheet" href="/styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
-    <script defer src="/arcade_scripts.js"></script>
+    <script defer src="/scripts.js"></script>
   </head>
   <body>
     <div class="arcade-top">
