--- a/snake.html
+++ b/snake.html
@@ -78,7 +78,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo6.png" />
+    <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
     <link rel="stylesheet" href="/snake-styles.css" />
     <link
       rel="stylesheet"
