--- a/snake.html
+++ b/snake.html
@@ -1,74 +1,3 @@
-<! ––<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="HTML, CSS" />
-    <meta name="description" content="An Arcade with games" />
-    <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/ArcadeLogo6.png" />
-    <link rel="stylesheet" href="/snake-styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
-      rel="stylesheet" />
-    <script src="/snake-script.js" defer="5000ms"></script>
-  </head>
-  <body>
-    <div id="top" class="top-bar">
-      <i id="menu" class="fa-solid fa-bars nav-bar-option"></i>
-      <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="/index.html">
-          The Arcade
-          <img
-            class="logo top-bar-item"
-            src="/ArcadeLogo2Trim.gif"
-            alt="The Arcade" />
-        </a>
-      </p>
-      <p class="games">
-        <a id="gamesLink" href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
-      </p>
-      <p class="contact">
-        <a id="contactLink" href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
-      </p>
-    </div>
-    <nav class="nav-bar">
-      <p class="toggle-text">
-        &nbsp;Toggle Theme&nbsp;<i
-          class="fa-solid fa-toggle-off toggleTheme"></i>
-      </p>
-    </nav>
-    <div id="game" class="container-game">
-      <div class="ui2">
-        <!--
-        <p id="lapsS"></p>
-        <p id="lapsR"></p>
-        <p id="lapsB"></p> -->
-        <p>
-          Version:<br />
-          Snek Pre-Alpha
-        </p>
-        <p id="scoreText">Score: <br>0/0</p>
-        <p id="scoreText"> Controls: WASD / Arrow Keys</p>
-        <p id="flashCooldown">Q: Flash Cooldown: Ready</p>
-        <div id="snek"></div>
-      </div>
-      <div class="game">
-        <canvas id="canvas" height="512px" width="512px"> </canvas>
-      </div>
-      <div class="ui"></div>
-    </div>
-    <!-- <ul id="uljs"></ul> -->
-  </body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -94,7 +23,7 @@
   </head>
   <body>
     <div class="arcade-top">
-      <p class="arcade-text"><a href="/arcade.html">The Arcade</a>
+      <p class="arcade-text"><a href="/index.html">The Arcade</a>
         <div class="games-dropdown">
           <a href="/snake.html">Snek</a>
         </div>
